--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -198,3 +198,145 @@ body{
   0 0 36px #00cfcf, 
   0 0 48px #025757;
 }
+
+
+
+
+.neon-border {
+  color: #24c2d3; /* Color de base del texto */
+  border: 2px solid #24c2d3; /* Borde con el color deseado */
+  
+  background-color:transparent; /* Fondo transparente */
+  
+  /* Efecto de sombra suave en el borde */
+  box-shadow: 
+    0 0 1px #24c2d3, /* Ajuste suave para el color del borde */
+    0 0 3px #24c2d3, 
+    0 0 5px #24c2d3;
+
+  /* Efecto de sombra múltiple para simular el brillo en el texto */
+  
+}
+
+
+
+.neon-border2 {
+  color: #dd0303; /* Color de base del texto */
+  border: 1px solid #bb0019; /* Borde con el color deseado */
+  
+  background-color: transparent; /* Fondo transparente */
+  
+  /* Efecto de sombra suave en el texto */
+  text-shadow: 
+    0 0 1px #dd0303, 
+    0 0 2px #dd0303, 
+    0 0 3px #dd0303;
+
+  /* Efecto de neón en el borde */
+  box-shadow: 
+    0 0 2px #dd0303, /* Sombra suave en el borde */
+    0 0 5px #dd0303, 
+    0 0 10px #dd0303,
+    0 0 2px #dd0303 inset; /* Sombra interna para un brillo adicional */
+}
+
+
+.neon-border-ver {
+  color: #fac81c; /* Color de base del texto */
+  border: 1px solid #fac81c; /* Borde con el color deseado */
+  
+  background-color: transparent; /* Fondo transparente */
+  
+  /* Efecto de sombra suave en el texto */
+  text-shadow: 
+    0 0 1px #fac81c, 
+    0 0 2px #fac81c, 
+    0 0 3px #fac81c;
+
+  /* Efecto de neón en el borde */
+  box-shadow: 
+    0 0 2px #fac81c, /* Sombra suave en el borde */
+    0 0 5px #fac81c, 
+    0 0 10px #fac81c,
+    0 0 2px #fac81c inset; /* Sombra interna para un brillo adicional */
+}
+
+
+.neon-border-editar {
+  color:#1774ff ; /* Color de base del texto */
+  border: 1px solid #1774ff; /* Borde con el color deseado */
+  
+  background-color: transparent; /* Fondo transparente */
+  
+  /* Efecto de sombra suave en el texto */
+  text-shadow: 
+    0 0 1px #1774ff, 
+    0 0 2px #1774ff, 
+    0 0 3px #1774ff;
+
+  /* Efecto de neón en el borde */
+  box-shadow: 
+    0 0 2px #1774ff, /* Sombra suave en el borde */
+    0 0 5px #1774ff, 
+    0 0 10px #1774ff,
+    0 0 2px #1774ff inset; /* Sombra interna para un brillo adicional */
+}
+
+
+
+
+
+
+
+
+.neon-border3 {
+  border: 2px solid #06ecec; /* Borde con el color deseado */
+  background-color: black; /* Fondo negro */
+  color: #06ecec; /* Color del texto para combinar con el borde */
+  
+  /* Sombra interna para crear el efecto de iluminación hacia adentro */
+  box-shadow: 
+    inset 0 0 20px #06ecec, /* Sombra interna */
+    inset 0 0 50px #06ecec, /* Sombra interna */
+    0 0 20px #06ecec; /* Sombra externa suave para el brillo */
+}
+
+
+
+.fondo {
+  position: relative; /* Necesario para que el pseudo-elemento se posicione correctamente */
+  background-image: url('/texture/geometric-neon-grid-pattern-glitch-effect-futuristic-abstract-background-of-retro-80s-90s-style-retrowave-synthwave-vaporwave-background-abstract-modern-design-isolated-illustration-vector.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100vh;
+}
+
+/* .fondo::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4); 
+  z-index: 1; 
+} */
+
+
+.fondo-content {
+  position: relative;
+  z-index: 2; /* Coloca el contenido sobre la superposición negra */
+}
+
+
+
+
+
+
+
+
+
+
+
