test mobile bug

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -331,3 +331,15 @@ body{
 
 
 
+@keyframes rotateAnimation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.rotate {
+  animation: rotateAnimation 2s linear infinite;
+}
