--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -275,33 +275,49 @@ body{
 
 
 
+.neon-border-crear {
+  color:#31f318 ; /* Color de base del texto */
+  border: 1px solid #31f318; /* Borde con el color deseado */
+  
+  background-color: transparent; /* Fondo transparente */
+  
+  /* Efecto de sombra suave en el texto */
+ 
+
+  /* Efecto de neón en el borde */
+  box-shadow: 
+    0 0 2px #31f318, /* Sombra suave en el borde */
+    0 0 5px #31f318, 
+    0 0 10px #31f318,
+    0 0 2px #31f318 inset; /* Sombra interna para un brillo adicional */
+}
+
+
 
 
 
 
 
 .neon-border3 {
-  border: 2px solid #670097; /* Borde con el color deseado */
+  border: 2px solid #47ecec; /* Borde con el color deseado */
   background-color: black; /* Fondo negro */
-  color: #670097; /* Color del texto para combinar con el borde */
+  color: #47ecec; /* Color del texto para combinar con el borde */
   
   /* Sombra interna para crear el efecto de iluminación hacia adentro */
   box-shadow: 
-    inset 0 0 20px #670097, /* Sombra interna */
-    inset 0 0 50px #670097, /* Sombra interna */
-    0 0 20px #670097; /* Sombra externa suave para el brillo */
+    inset 0 0 20px #47ecec, /* Sombra interna */
+    inset 0 0 50px #47ecec, /* Sombra interna */
+    0 0 20px #47ecec; /* Sombra externa suave para el brillo */
 }
 
 
 
-/* .fondo {
+ .fondo {
   position: relative; 
-  background-image: url('/texture/retro.jpg');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  background-image: url('/texture/boee.webp');
+ 
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .fondo::before {
@@ -311,9 +327,9 @@ body{
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.6); 
+  background-color: rgba(0, 0, 0, 0.4); 
   z-index: 1; 
-}  */
+}  
 
 
 .fondo-content {
@@ -343,3 +359,7 @@ body{
 .rotate {
   animation: rotateAnimation 2s linear infinite;
 }
+
+
+
+
